upload asr. WARNING: BUILD FAILED.

--- a/baychat/baychat.vcxproj
+++ b/baychat/baychat.vcxproj
@@ -109,8 +109,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>winmm.lib;libjansson.a;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\libs\jansson;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>winmm.lib;libjansson.a;msc_x64.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -151,18 +151,18 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\asr_service.h" />
     <ClInclude Include="include\basic_types.h" />
     <ClInclude Include="include\dal.h" />
     <ClInclude Include="include\logger.h" />
     <ClInclude Include="include\mic_device_adapter.h" />
     <ClInclude Include="include\util.h" />
     <ClInclude Include="include\file_formatter.h" />
-    <ClInclude Include="include\json_file.h" />
     <ClInclude Include="src\stdafx.h" />
     <ClInclude Include="src\targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\json_file.cpp" />
+    <ClCompile Include="src\asr_service.cpp" />
     <ClCompile Include="src\dal.cpp" />
     <ClCompile Include="src\logger.cpp" />
     <ClCompile Include="src\main.cpp" />
