--- a/baychat/baychat.vcxproj.filters
+++ b/baychat/baychat.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="src\winrec.h">
       <Filter>源文件</Filter>
     </ClInclude>
+    <ClInclude Include="include\input_helper.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -84,6 +87,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\iat_record_sample.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\input_helper.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
