--- a/baychat/baychat.vcxproj.filters
+++ b/baychat/baychat.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="include\input_helper.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="include\app.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -90,6 +93,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\input_helper.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\app.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
